[gd_scene load_steps=2 format=3 uid="uid://tutorial_overlay_001"]

[ext_resource type="Script" path="res://src/ui/TutorialOverlay.gd" id="1"]

[node name="TutorialOverlay" type="CanvasLayer"]
layer = 100
script = ExtResource("1")

[node name="DarkeningLayer" type="ColorRect" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0.75)

[node name="SpotlightContainer" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="Arrow" type="Polygon2D" parent="."]
visible = false
color = Color(1, 0.8, 0.2, 0.95)

[node name="Circle" type="Line2D" parent="."]
visible = false
width = 4.0
default_color = Color(1, 0.8, 0.2, 0.95)

[node name="ExplanationPanel" type="Panel" parent="."]
visible = false
offset_left = 200.0
offset_top = 50.0
offset_right = 1080.0
offset_bottom = 450.0

[node name="MarginContainer" type="MarginContainer" parent="ExplanationPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 70

[node name="ExplanationLabel" type="RichTextLabel" parent="ExplanationPanel/MarginContainer"]
layout_mode = 2
bbcode_enabled = true
text = "Tutorial explanation text goes here"
fit_content = true

[node name="NextButton" type="Button" parent="ExplanationPanel"]
visible = false
layout_mode = 0
offset_left = 680.0
offset_top = 350.0
offset_right = 860.0
offset_bottom = 390.0
text = "Next â†’"

[node name="SkipButton" type="Button" parent="."]
offset_left = 1050.0
offset_top = 20.0
offset_right = 1250.0
offset_bottom = 60.0
text = "Skip Tutorial"
